Bug 694319 (related): bounds checking T1 op stack

Add some lower bounds checking for the operand stack, to one of the Type 1
charstring interpreters used by pdf/ps2write.

This fixes one of the memory corruption problems with  Bug693711.pdf.

No cluster differences.